[project]
name = "medical-diagnosis-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai",
    "python-dotenv",
    "beautifulsoup4",
    "lxml",
    "requests",
    "fastapi",
    "uvicorn",
    "pydantic_settings",
]

[tool.black]
line-length = 120
